# cpprc

./: .gitignore  CMakeLists.txt  README.md  cpprc-config.cmake
src/: CMakeLists.txt  File2Cpp.cpp  ResourceGenerator.cpp  ResourceGenerator.hpp  SimpleResourceGenerator.cpp  SimpleResourceGenerator.hpp  cpprc.cpp
src/cpprc/: CMakeLists.txt  MainResourceGenerator.cpp  MainResourceGenerator.hpp  ResourceGenerator.cpp  ResourceGenerator.hpp  SimpleResourceGenerator.cpp  SimpleResourceGenerator.hpp  cpprc.cpp
src/libcpprc/: CMakeLists.txt
src/libcpprc/cpprc/: Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp
